--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,7 +72,7 @@ Platform
 
 {% assign obj = site.data.accessibility-support | map:"options" | where: "id", "digital-accessibility" %}
 {{ obj | inspect }}
-{% assign all site.data.accessibility-support | join: "," %}
+{% assign all = site.data.accessibility-support | join: "," %}
 {{ all | inspect }}
 
 
