--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -3,17 +3,17 @@ data =
 "id_support": ["accessible-electronic-handout", "caption-audio", "general-accessibility"] 
 -->
 Data
+
 {{ include.data | inspect }}
 {%- assign filteredItems = "" | split: "," -%}
 
 All Supports
 {% assign aSupports = site.data.accessibility-support | map:"options" %}
-{{ aSupports | inspect }}
 
 
 Each Support
+
 {%- for aSupport in aSupports -%}
-    {{ aSupport | inspect }}
     {%- if include.data contains aSupport[id] -%}
         {% assign newItem = include.data[1] -%}
         {% assign filteredItems = filteredItems | push: newItem -%}
@@ -21,3 +21,5 @@ Each Support
     {%- endif -%}
 
 {%- endfor -%}
+
+{{ filteredItems | inspect }}
