--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -8,12 +8,9 @@ Data
 {%- assign filteredItems = site.data.accessibility-support | map: "options" -%}
 
 {%- for item in filteredItems -%}
-{% if item contains "option" %}
-    option
-{% endif %}
+{{ item }}
 {%- endfor -%}
 
 
-Filtered Items
-: {{ filteredItems | inspect }}
+
 
