--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -12,13 +12,13 @@ New Test
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
         {% if include.data contains aSupport.id %}
-            Support id: {{ aSupport.id }}<br />
+            {{ aSupport.id }}
         {% endif %}
         {%- assign newASubGroups = aSupport | map: "options" -%}
         {%- for newASubGroup in newASubGroups -%}
             {%- for newASupport in newASubGroup -%}
                 {% if include.data contains newASupport.id %}
-                    Includes?: {{ newItems3.id }} <br />
+                    {{ newASupport.id }}
                 {% endif %}
             {%- endfor -%}
         {%- endfor -%}
