--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -2,23 +2,23 @@
 data =     
 "id_support": ["caption-audio", "material-ahead-of-time", "A captioned recording with transcript will be shared with attendees after the live event"] 
 -->
-Data
-: {{ include.data | inspect }}
-{%- assign aGroups = "" | split: "," -%}
+{%- assign filteredItems = "" | split: "," -%}
 {%- assign aGroups = site.data.accessibility-support | map: "options" -%}
 
-
-New Test
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
         {% if include.data contains aSupport.id %}
-            {{ aSupport.id }}
+            {% assign aSupportAux = aSupportAux | push: aSupport.id %}
+            {% assign aSupportAux = aSupportAux | push: aSupport.name %}
+            {% assign filteredItems  = filteredItems | push: aSupportAux %}
         {% endif %}
         {%- assign newASubGroups = aSupport | map: "options" -%}
         {%- for newASubGroup in newASubGroups -%}
             {%- for newASupport in newASubGroup -%}
                 {% if include.data contains newASupport.id %}
-                    {{ newASupport.id }}
+                    {% assign aSupportAux = aSupportAux | push: aSupport.id %}
+                    {% assign aSupportAux = aSupportAux | push: aSupport.name %}
+                    {% assign filteredItems  = filteredItems | push: aSupportAux %}
                 {% endif %}
             {%- endfor -%}
         {%- endfor -%}
