--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -8,6 +8,7 @@ data =
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
         {% if include.data contains aSupport.id %}
+            {% assign aSupportAux = "" | split: "," %}
             {% assign aSupportAux = aSupportAux | push: aSupport.id %}
             {% assign aSupportAux = aSupportAux | push: aSupport.name %}
             {% assign filteredItems  = filteredItems | push: aSupportAux %}
@@ -16,6 +17,7 @@ data =
         {%- for newASubGroup in newASubGroups -%}
             {%- for newASupport in newASubGroup -%}
                 {% if include.data contains newASupport.id %}
+                    {% assign aSupportAux = "" | split: "," %}
                     {% assign aSupportAux = aSupportAux | push: newASupport.id %}
                     {% assign aSupportAux = aSupportAux | push: newASupport.name %}
                     {% assign filteredItems  = filteredItems | push: aSupportAux %}
