--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,11 +72,10 @@ Platform
 
 
 Accessibility support
-: {% if course.accessibility_support %}
+{% if course.accessibility_support %}
 {% include filtered-accessibility-support.liquid data=course.accessibility_support %} 
-{% for accessibilitySupport in filteredItems %}
-* {{ accessibilitySupport[1] }}
-{% endfor %} 
+:{% for accessibilitySupport in filteredItems %}
+* {{ accessibilitySupport[1] }}{% endfor %} 
 {% else %}
 : Not provided
 {% endif %}
