--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -1,6 +1,6 @@
 <!-- 
 data =     
-"id_support": ["caption-audio", "material-ahead-of-time", "A captioned recording with transcript will be shared with attendees after the live event"] 
+"id_support": ["caption-audio", "material-ahead-of-time", "other":["A captioned recording with transcript will be shared with attendees after the live event"]] 
 -->
 {%- assign filteredItems = "" | split: "," -%}
 {%- assign aGroups = site.data.accessibility-support | map: "options" -%}
