--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,13 +72,16 @@ Platform
 
 
 Accessibility support
-{% if course.accessibility_support %}
+{{ assign hasASupport = false }}
+{% if course.accessibility_support%}
 : {% include filtered-accessibility-support.liquid data=course.accessibility_support %} 
+{{ assign hasASupport = true }}
 {% for accessibilitySupport in filteredItems %}
 * {{ accessibilitySupport[1] }}{% endfor %} 
-{% else if couse.other_accessibility_support %}
-* {{ couse.other_accessibility_support }}
-{% else %}
+{% if course.other_accessibility_support %}
+* {{ course.other_accessibility_support }}
+{{ assign hasASupport = true }}
+{% if !hasASupport %}
 : Not provided
 {% endif %}
 
