--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,11 +72,11 @@ Platform
 
 
 Accessibility support
-: {{ assign hasASupport = false }}
+{{ assign hasASupport = false }}
 {% if course.accessibility_support%}
 {% include filtered-accessibility-support.liquid data=course.accessibility_support %} 
 {{ assign hasASupport = true }}
-{% for accessibilitySupport in filteredItems %}
+: {% for accessibilitySupport in filteredItems %}
 * {{ accessibilitySupport[1] }}{% endfor %} 
 {% endif %}
 {% if course.other_accessibility_support %}
