--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -98,8 +98,8 @@ Cost
 : {{ course.cost}}
 
 Availability
-: From {{ course.start_date}}{% if course.end_date %} 
-{% if course.end_date %} to {{ course.end_date }}{% endif %} {% endif %}
+: From {{ course.start_date | date: "%d %b %y" }}{% if course.end_date %} 
+{% if course.end_date %} to {{ course.end_date  | date: "%d %b %y" }}{% endif %} {% endif %}
 
 Website
 : <a href="{{ course.website}}" rel="external">{{ course.website}}</a>
@@ -111,9 +111,9 @@ Reviews page
 : Not provided
 {% endif %}      
         
-This information was last updated on {{ course.info_last_updated}}.
+This information was last updated on {{ course.info_last_updated | date: "%d %b %y" }}.
 {% if course.course_content_last_update %}
-  The content of this resource was last updated on {{ course.content_last_updated}}.
+  The content of this resource was last updated on {{ course.content_last_updated  | date: "%d %b %y" }}.
 {% endif %} 
 {% include excol.html type="end" %}
 {% include box.html type="end" %}
