--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,9 +72,8 @@ Platform
 
 
 Accessibility support
-: 
-{{ assign hasASupport = false }}
-{% if course.accessibility_support%}
+: {{ assign hasASupport = false }} 
+{% if course.accessibility_support %}
 {% include filtered-accessibility-support.liquid data=course.accessibility_support %}
 {{ assign hasASupport = true }}
 {% for accessibilitySupport in filteredItems %}
@@ -90,7 +89,7 @@ Accessibility support
 
 Length
 {% if course.length %}
-: {{ course.length}}
+: {{ course.length }}
 {% else %}
 : Not provided
 {% endif %}
@@ -99,8 +98,8 @@ Cost
 : {{ course.cost}}
 
 Availability
-: From {{ course.start_date | date: "%b %d, %y" }}{% if course.end_date %} 
-{% if course.end_date %} to {{ course.end_date  | date: "%b %d, %y" }}{% endif %}{% endif %}
+: From {{ course.start_date | date: "%y %b, %b" }}{% if course.end_date %} 
+{% if course.end_date %} to {{ course.end_date | date: "%y %b, %b"  }}{% endif %}{% endif %}
 
 Website
 : <a href="{{ course.website}}" rel="external">{{ course.website }}</a>
@@ -112,9 +111,9 @@ Reviews page
 : Not provided
 {% endif %}      
         
-This information was last updated on {{ course.info_last_updated | date: "%b %d, %y" }}.
+This information was last updated on {{ course.info_last_updated | date: "%y %b, %b" }}.
 {% if course.course_content_last_update %}
-  The content of this resource was last updated on {{ course.content_last_updated  | date: "%b %d, %y" }}.
+  The content of this resource was last updated on {{ course.content_last_updated | date: "%y %b, %b" }}.
 {% endif %} 
 {% include excol.html type="end" %}
 {% include box.html type="end" %}
