--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -85,7 +85,7 @@ Accessibility support
 {% endif %}
 {% if hasASupport != true %}
 : Not provided
-{% endunless %}
+{% endif %}
 
 Length
 {% if course.length %}
