--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -71,18 +71,21 @@ Platform
 {% endif %}
 
 
+{% assign hasASupport = false %}
 Accessibility support
 : {% if course.accessibility_support %}
 {% include filtered-accessibility-support.liquid data=course.accessibility_support %}
+{% assign hasASupport = true %}
 {% for accessibilitySupport in filteredItems %}
 * {{ accessibilitySupport[1] }}{% endfor %} 
 {% endif %}
 {% if course.other_accessibility_support %}
 * {{ course.other_accessibility_support }}
+{% assign hasASupport = true %}
 {% endif %}
-{% if !course.accessibility_support and !course.other_accessibility_support %}
+{% unless hasASupport %}
 : Not provided
-{% endif %}
+{% endunless %}
 
 Length
 {% if course.length %}
