--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -72,7 +72,8 @@ Platform
 
 
 {% assign hasASupport = false %}
-Accessibility support :  
+Accessibility support 
+:  
 {% if course.accessibility_support %}  
 {% include filtered-accessibility-support.liquid data = course.accessibility_support %}
 {% assign hasASupport = true %}
