--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -71,10 +71,9 @@ Platform
 {% endif %}
 
 
-
+{% assign hasASupport = false %} 
 Accessibility support 
-: {% assign hasASupport = false %} 
-{% if course.accessibility_support %}
+: {% if course.accessibility_support %} 
 {% include filtered-accessibility-support.liquid data = course.accessibility_support %}
 {% assign hasASupport = true %}
 {% for accessibilitySupport in filteredItems %} 
