--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -73,10 +73,7 @@ Platform
 
 {% assign hasASupport = false %} 
 Accessibility support 
-: {% if course.accessibility_support %} 
-{% include filtered-accessibility-support.liquid data = course.accessibility_support %}
-{% assign hasASupport = true %}
-{% for accessibilitySupport in filteredItems %} 
+: {% if course.accessibility_support %}{% include filtered-accessibility-support.liquid data = course.accessibility_support %}{% assign hasASupport = true %}{% for accessibilitySupport in filteredItems %}
 * {{ accessibilitySupport[1] }}{% endfor %} {% endif %}
 {% if course.other_accessibility_support %} 
 * {{ course.other_accessibility_support }}{% assign hasASupport = true %}{% endif %}
