--- a/_includes/sort-data-folder.liquid
+++ b/_includes/sort-data-folder.liquid
@@ -4,3 +4,5 @@
     {% assign items = items | push: newItem -%}
 {%- endfor -%}
 {%- assign itemsSorted = items | sort: include.sortKey -%}
+
+{{ itemsSorted | inspect }}
