--- a/_includes/sort-data-folder.liquid
+++ b/_includes/sort-data-folder.liquid
@@ -3,6 +3,4 @@
     {% assign newItem = item[1] -%}
     {% assign items = items | push: newItem -%}
 {%- endfor -%}
-{%- assign itemsSorted = items | sort: include.sortKey -%}
-
-{{ itemsSorted | inspect }}
+{%- assign items = items | sort: include.sortKey -%}
