--- a/_includes/sort-data-folder.liquid
+++ b/_includes/sort-data-folder.liquid
@@ -3,4 +3,4 @@
     {% assign newItem = item[1] -%}
     {% assign items = items | push: newItem -%}
 {%- endfor -%}
-{%- assign items = items | sort: include.sortKey -%}
+{%- assign itemsSorted = items | sort: include.sortKey -%}
