--- a/_includes/sort-data-folder.liquid
+++ b/_includes/sort-data-folder.liquid
@@ -3,4 +3,5 @@
     {% assign newItem = item[1] -%}
     {% assign items = items | push: newItem -%}
 {%- endfor -%}
+{{ include.sortKey | inspect }}
 {%- assign itemsSorted = items | sort: include.sortKey -%}
