--- a/_includes/sort-countries.liquid
+++ b/_includes/sort-countries.liquid
@@ -1,3 +1,6 @@
+{% if data %}
+{{ data }}
+{% endif%}
 {% assign orderedCountries = "" | split: "," %}
 {% for country in site.data.countries %}
   {% assign nCountry = "" %}
