--- a/_includes/sort-countries.liquid
+++ b/_includes/sort-countries.liquid
@@ -7,12 +7,13 @@
   {% assign nCountry =  nCountry | append: country[0] | append: ',' %} 
   {% assign nCountry =  nCountry | split: "," %}  
   {% assign orderedCountries = orderedCountries | push: nCountry %}
-  {% if include.data contains country[0] %}  
-    {% assign orderedCountries = orderedCountries | push: nCountry %}
+  {% if include.data and include.data.size != 0 %}  
+    {% if  include.data contains country[0] %}
+      {% assign orderedCountries = orderedCountries | push: nCountry %}  
+    {% endif %}
+  {% else }
+    {% assign orderedCountries = orderedCountries | push: nCountry %}  
   {% endif %}
-  {% unless include.data and include.data.size != 0%}
-    {% assign orderedCountries = orderedCountries | push: nCountry %}
-  {% endunless %}
 {% endfor %}
 {% assign orderedCountries = orderedCountries | sort %}
 {% if include.data %}
