--- a/_includes/sort-countries.liquid
+++ b/_includes/sort-countries.liquid
@@ -10,7 +10,7 @@
   {% assign orderedCountries = orderedCountries | push: nCountry %}  
   {% if include.data and include.data.size != 0 %}  
     {% if include.data contains country[0] %}
-      {{country[0]}}
+      {{country[0] | inspect}}
     {% endif %}
   {% else }
     {{"not include"}}
